# tree-sitter-ledger

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  flake.nix  grammar.js  index.js  package.json  tree-sitter.json
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: binding.cc  grammar.json  node-types.json  parser.c
test/corpus/: accounts.txt  automated_transactions.txt  comments_and_notes.txt  commodities.txt  dates.txt  directives.txt  main.txt  misc.txt  periodic_transactions.txt  status.txt  test.txt
